<resources>
    <string name="app_name">Photon</string>

    <!--Fonts-->
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>

    <!--Errors-->
    <string name="sorry_something_wrong">Извините, что-то пошло не так, попробуйте позже</string>
    <string name="error_need_enter_account">Необходимо войти в аккаунт</string>
    <string name="error_unknown">Неизвестная ошибка</string>

    <!--Splash Screen-->
    <string name="splash_title">Фотон</string>
    <string name="splash_description">Онлайн-галерея фуд-фотографии.\nДля вдохновения и обучения.</string>

    <!--Main Screen-->
    <string name="main_title">Фотон</string>
    <string name="main_menu_search">Поиск</string>
    <string name="main_menu_login">Войти</string>
    <string name="main_menu_logout">Выйти</string>
    <string name="main_menu_register">Зарегистрироваться</string>
    <string name="main_repeate">Повтор</string>
    <string name="main_menu_connect_developers">Связаться с разработчиками</string>

    <!--Photocard Screen-->
    <string name="photocard_title">Фотокарточка</string>
    <string name="photocard_menu_in_favorites">В избранное</string>
    <string name="photocard_menu_share">Поделиться</string>
    <string name="photocard_menu_save">Скачать</string>
    <string name="photocard_cards">Карты</string>
    <string name="photocard_albums">Альбомы</string>
    <string name="photocard_saving_completed">Изображение загружено</string>

    <!--Album Screen-->
    <string name="album_title">Альбом</string>
    <string name="album_menu_add_photocard">Добавить фотокарточку</string>
    <string name="album_menu_edit">Редактировать альбом</string>
    <string name="album_menu_delete">Удалить альбом</string>
    <string name="album_empty">Альбом пуст</string>
    <string name="album_delete_question">Вы уверены что хотите удалить альбом?</string>
    <string name="album_delete_success">Альбом успешно удален</string>

    <!--Profile Screen-->
    <string name="profile_title">Профиль</string>
    <string name="profile_menu_create_album">Создать альбом</string>
    <string name="profile_menu_edit_profile">Редактировать профиль</string>
    <string name="profile_menu_change_avatar">Изменить аватар</string>
    <string name="profile_menu_logout">Выйти</string>
    <string name="profile_cards">Карты</string>
    <string name="profile_albums">Альбомы</string>

    <!--User Screen-->
    <string name="user_title">Автор</string>

    <!--Upload Screen-->
    <string name="upload_description">Выберите фотокарточку из галереи и добавьте к вашим альбомам</string>
    <string name="upload_choose_photo">Выбрать фото</string>

    <!--AddInfo Screen-->
    <string name="add_info_title">Добавление фото</string>
    <string name="add_info_step_one_title">Шаг 1 из 3</string>
    <string name="add_info_step_two_title">Шаг 2 из 3</string>
    <string name="add_info_step_three_title">Шаг 3 из 3</string>
    <string name="add_info_name_hint">Название</string>
    <string name="add_info_tag_hint">Имя тега</string>
    <string name="add_info_choose_name">Укажите название фотографии</string>
    <string name="add_info_choose_filters">Укажите параметры фотографии</string>
    <string name="add_info_choose_tags">Укажите теги</string>
    <string name="add_info_choose_album">Выберите альбом</string>
    <string name="add_info_button_save">Сохранить</string>
    <string name="add_info_button_cancel">Отмена</string>

    <!--Auth Screen-->
    <string name="auth_title">Профиль</string>
    <string name="auth_menu_login">Войти</string>
    <string name="auth_menu_register">Зарегистрироваться</string>
    <string name="auth_description">Авторизуйтесь, чтобы посмотреть данные профиля</string>
    <string name="auth_register">Регистрация</string>
    <string name="auth_login">Вход</string>
    <string name="auth_success">Вы успешно авторизованы</string>

    <!--Login Dialog-->
    <string name="login_dialog_header">Вход в аккаунт</string>
    <string name="login_dialog_email">Email</string>
    <string name="login_dialog_email_error">Email невалидный</string>
    <string name="login_dialog_password">Пароль</string>
    <string name="login_dialog_password_error">Длина - не менее 8 символов, латиница, не может содержать спецсимволы и нижние подчеркивания (!@#$%^&amp;*()\/|_=+-)</string>
    <string name="login_dialog_error_incorrect_data">Неверный email или пароль</string>
    <string name="login_dialog_error_empty_fields">Заполните все поля!</string>

    <!--Register Dialog-->
    <string name="register_dialog_title">Регистрация</string>
    <string name="register_dialog_login">Логин</string>
    <string name="register_dialog_login_error">Латиница и нижние подчеркивания, не может содержать спецзнаки (!@#$%^&amp;*()\|=+-)</string>
    <string name="register_dialog_email">Email</string>
    <string name="register_dialog_email_error">Email невалидный</string>
    <string name="register_dialog_name">Имя</string>
    <string name="register_dialog_name_error">Имя не должно быть короче 3 символов</string>
    <string name="register_dialog_password">Пароль</string>
    <string name="register_dialog_password_error">Длина - не менее 8 символов, латиница, не может содержать спецсимволы и нижние подчеркивания (!@#$%^&amp;*()\|_=+-)</string>
    <string name="register_dialog_error_empty_fields">Заполните все поля!</string>

    <!--Album Dialog-->
    <string name="album_dialog_header">Новый альбом</string>
    <string name="album_dialog_edit_header">Редактирование альбома</string>
    <string name="album_dialog_title">Название</string>
    <string name="album_dialog_description">Описание</string>
    <string name="album_dialog_title_error">Длина - не менее 3 символов, не может содержать спецсимвоыл(!@#$%^&amp;*()\/|=+-)</string>
    <string name="album_dialog_description_error">Длина - не менее 3 символов, не более 400 символов</string>
    <string name="album_dialog_error_empty_fields">Заполните все поля!</string>
    <string name="album_dialog_success">Альбом успешно создан</string>

    <!--Edit Profile Dialog-->
    <string name="edit_profile_dialog_header">Редактирование профиля</string>
    <string name="edit_profile_dialog_name">Имя</string>
    <string name="edit_profile_dialog_name_error">Имя не должно быть короче 3 символов</string>
    <string name="edit_profile_dialog_login">Логин</string>
    <string name="edit_profile_dialog_login_error">Латиница и нижние подчеркивания, не может содержать спецзнаки (!@#$%^&amp;*()\|=+-)</string>
    <string name="edit_profile_dialog_login_taken">Данный логин уже зарегистрирован!</string>
    <string name="edit_profile_dialog_success">Данные успешно изменены</string>

    <!--Avatar dialog-->
    <string name="avatar_dialog_header">Изменить аватар</string>
    <string name="avatar_dialog_choose_camera">Сделать фото</string>
    <string name="avatar_dialog_choose_gallery">Выбрать из галереи</string>
    <string name="avatar_dialog_file_not_created">Фото не может быть создано</string>

    <!--Exit dialog-->
    <string name="exit_dialog_title">Вы действительно хотите выйти?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>

    <!--Navigation Menu-->
    <string name="menu_navigation_main">Главная</string>
    <string name="menu_navigation_profile">Профиль</string>
    <string name="menu_navigation_upload">Загрузить</string>

    <!--Items Info Photo Or Album-->
    <string name="item_info_name_album">Фото</string>
    <string name="item_info_count_empty">0</string>

    <!--Dialog Footer-->
    <string name="dialog_footer_ok">ОК</string>
    <string name="dialog_footer_cancel">Отмена</string>

    <!--Filters-->
    <string name="filters_food">Блюдо</string>
    <string name="filter_meat">Мясо</string>
    <string name="filter_fish">Рыба</string>
    <string name="filter_vegetable">Овощи</string>
    <string name="filter_fruit">Фрукты</string>
    <string name="filter_cheese">Сыр</string>
    <string name="filter_candy">Десерты</string>
    <string name="filter_drink">Напитки</string>
    <string name="filter_tone">Оттенки</string>
    <string name="filter_decor">Оформление</string>
    <string name="filter_temperature">Температура</string>
    <string name="filter_light">Свет</string>
    <string name="filter_direction_light">Направление света</string>
    <string name="filter_source_light">Источник света</string>
    <string name="filter_common">Обычное</string>
    <string name="filter_party">Праздничное</string>
    <string name="filter_light_natural">Естественный</string>
    <string name="filter_light_synthetic">Искуственный</string>
    <string name="filter_light_mix">Смешанный</string>
    <string name="filter_cold_temp">Холодная</string>
    <string name="filter_hot_temp">Горячая</string>
    <string name="filter_comfort_temp">Комнатная</string>
    <string name="filter_light_dir_front">Прямой</string>
    <string name="filter_light_dir_back">Контровой</string>
    <string name="filter_light_dir_side">Боковой</string>
    <string name="filter_light_dir_mix">Смешанный</string>
    <string name="filter_light_count_one">Один</string>
    <string name="filter_light_count_two">Два</string>
    <string name="filter_light_count_three">Три</string>
    <string name="filter_yellow">Желтый</string>
    <string name="filter_orange">Оранжевый</string>
    <string name="filter_red">Красный</string>
    <string name="filter_green">Зеленый</string>
    <string name="filter_blue">Голубой</string>
    <string name="filter_white">Белый</string>
    <string name="filter_dark_blue">Синий</string>
    <string name="filter_black">Черный</string>
    <string name="filter_brown">Коричневый</string>
    <string name="filter_purple">Фиолетовый</string>

    <!--Profile photo upload-->
    <string name="photo_upload_choose_photo">Выберите фото</string>
    <string name="photo_upload_permit">Разрешить</string>
    <string name="photo_upload_need_camera_permission">Необходимо разрешение на работу с камерой!</string>
    <string name="photo_upload_need_write_permission">Необходимо разрешение на запись!</string>
    <string name="photo_error_create_file">Фотография не может быть создана</string>
    <string name="photo_error_give_permission">Для корректной работы приложения необходимо дать требуемые разрешения!</string>

</resources>
